--- a/rewards/arc/index.html
+++ b/rewards/arc/index.html
@@ -34,7 +34,8 @@
     <!-- Brand Card -->
     <div class="bg-gray-900/50 border border-gray-800 rounded-2xl p-6 mb-6 glow">
       <div class="flex items-center gap-4 mb-4">
-        <img src="/logos/arc-white.png" alt="ARC" class="h-8 object-contain" />
+        <img src="/logos/arc-icon-white.png" alt="ARC" class="h-8 object-contain" />
+        <span class="text-xl font-bold text-white">ARC</span>
       </div>
       <p class="text-gray-400 text-sm leading-relaxed">
         ARC builds privacy-first AI infrastructure — empowering businesses and individuals to run AI without data exposure. 
