--- a/index.html
+++ b/index.html
@@ -2814,7 +2814,7 @@ function VideoDemoPage({ darkMode, onBack }) {
 
   const videos = [
     { id: '95298802', title: 'Learn about ARC', logo: '/logos/arc-icon-white.png', desc: 'Privacy-first AI infrastructure', link: '/rewards/arc/', reward: '0.10 USDC' },
-    { id: '104', title: 'Learn about Aptos', logo: '/logos/aptos-white.svg', desc: 'Layer-1 blockchain with Move smart contracts', link: 'https://aptoslabs.com', reward: '0.10 USDC' },
+    { id: '104', title: 'Learn about Aptos', logo: '/logos/aptos-icon-white.svg', desc: 'Layer-1 blockchain with Move smart contracts', link: 'https://aptoslabs.com', reward: '0.10 USDC' },
   ];
 
   const nextSlide = () => setCurrentSlide((prev) => (prev + 1) % videos.length);
