--- a/index.html
+++ b/index.html
@@ -2813,7 +2813,7 @@ function VideoDemoPage({ darkMode, onBack }) {
   const [currentSlide, setCurrentSlide] = useState(0);
 
   const videos = [
-    { id: '95298802', title: 'Learn about ARC', logo: '/logos/arc-icon-white.png', desc: 'Privacy-first AI infrastructure', link: '/rewards/arc/' },
+    { id: '95298802', title: 'Learn about ARC', logo: '/logos/arc-icon-white.png', desc: 'Privacy-first AI infrastructure', link: '/rewards/arc/', reward: '$0.50 USDC' },
     { id: '104', title: 'Learn about Aptos', logo: '/logos/aptos-icon-white.svg', desc: 'Layer-1 blockchain with Move smart contracts', link: 'https://aptoslabs.com' },
   ];
 
