--- a/rewards/arc/index.html
+++ b/rewards/arc/index.html
@@ -31,21 +31,6 @@
       </span>
     </div>
 
-    <!-- Brand Card -->
-    <div class="bg-gray-900/50 border border-gray-800 rounded-2xl p-6 mb-6 glow">
-      <div class="flex items-center gap-4 mb-4">
-        <img src="/logos/arc-icon-white.png" alt="ARC" class="h-8 object-contain" />
-        <span class="text-xl font-bold text-white">ARC</span>
-      </div>
-      <p class="text-gray-400 text-sm leading-relaxed">
-        ARC builds privacy-first AI infrastructure — empowering businesses and individuals to run AI without data exposure. 
-        Their flagship product Matrix keeps your data encrypted-in-use inside a verified secure environment, so every conversation stays private.
-      </p>
-      <div class="flex items-center gap-3 mt-4">
-        <a href="https://arc.ai" target="_blank" rel="noopener" class="text-xs text-purple-400 hover:text-purple-300 transition">arc.ai →</a>
-      </div>
-    </div>
-
     <!-- Video Embed -->
     <div class="bg-gray-900/50 border border-gray-800 rounded-2xl overflow-hidden mb-6 glow">
       <div class="px-6 py-4 border-b border-gray-800 flex items-center justify-between">
@@ -58,12 +43,25 @@
           title="ARC Video Rewards"
           style="position:absolute;top:0;left:0;width:100%;height:100%;border:0;" 
           loading="lazy" 
-          allow="autoplay; fullscreen; encrypted-media" 
+          allow="autoplay; encrypted-media" 
           referrerpolicy="strict-origin-when-cross-origin" 
           sandbox="allow-scripts allow-same-origin allow-forms allow-popups allow-popups-to-escape-sandbox" 
-          scrolling="yes" 
-          allowfullscreen>
+          scrolling="yes">
         </iframe>
+      </div>
+    </div>
+
+    <!-- How It Works -->
+    <div class="grid grid-cols-2 gap-3 sm:gap-4 max-w-2xl mx-auto mt-2">
+      <div class="bg-gray-900/50 border border-gray-800 rounded-xl p-3 sm:p-4 text-center">
+        <div class="text-xl sm:text-2xl mb-1">✅</div>
+        <p class="font-semibold text-xs sm:text-sm text-white">Complete</p>
+        <p class="text-[10px] sm:text-xs mt-0.5 text-gray-500">Answer a quick question</p>
+      </div>
+      <div class="bg-gray-900/50 border border-gray-800 rounded-xl p-3 sm:p-4 text-center">
+        <div class="text-xl sm:text-2xl mb-1">💰</div>
+        <p class="font-semibold text-xs sm:text-sm text-white">Earn Test USDC</p>
+        <p class="text-[10px] sm:text-xs mt-0.5 text-gray-500">Test rewards for learning</p>
       </div>
     </div>
 
